# docs/swagger.json
@@ -12,11 +12,11 @@
             "name": "Apache 2.0",
             "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
         },
-        "version": "1.0"
+        "version": "2.0"
     },
-    "basePath": "/",
+    "basePath": "/v2",
     "paths": {
-        "/v2/activate": {
+        "/activate": {
             "post": {
                 "description": "Activate a campaign for a visitor ID",
                 "consumes": [
@@ -26,7 +26,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "v2"
+                    "Campaigns"
                 ],
                 "summary": "Activate a campaign",
                 "operationId": "activate",
@@ -60,7 +60,7 @@
                 }
             }
         },
-        "/v2/campaigns": {
+        "/campaigns": {
             "post": {
                 "description": "Get all campaigns value and metadata for a visitor ID and context",
                 "consumes": [
@@ -70,7 +70,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "v2"
+                    "Campaigns"
                 ],
                 "summary": "Get all campaigns for the visitor",
                 "operationId": "get-campaigns",
@@ -107,7 +107,7 @@
                 }
             }
         },
-        "/v2/campaigns/{id}": {
+        "/campaigns/{id}": {
             "post": {
                 "description": "Get a single campaign value and metadata for a visitor ID and context",
                 "consumes": [
@@ -117,7 +117,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "v2"
+                    "Campaigns"
                 ],
                 "summary": "Get a single campaigns for the visitor",
                 "operationId": "get-campaign",
@@ -161,7 +161,7 @@
                 }
             }
         },
-        "/v2/flags": {
+        "/flags": {
             "post": {
                 "description": "Get all flags value and metadata for a visitor ID and context",
                 "consumes": [
@@ -171,7 +171,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "v2"
+                    "Flags"
                 ],
                 "summary": "Get all flags",
                 "operationId": "get-flags",
@@ -211,7 +211,7 @@
                 }
             }
         },
-        "/v2/flags/{key}": {
+        "/flags/{key}": {
             "post": {
                 "description": "Get a single flag value and metadata for a visitor ID and context",
                 "consumes": [
@@ -221,7 +221,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "v2"
+                    "Flags"
                 ],
                 "summary": "Get flag by name",
                 "operationId": "get-flag",
@@ -265,7 +265,7 @@
                 }
             }
         },
-        "/v2/flags/{key}/activate": {
+        "/flags/{key}/activate": {
             "post": {
                 "description": "Activate a flag by its key for a visitor ID",
                 "consumes": [
@@ -275,7 +275,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "v2"
+                    "Flags"
                 ],
                 "summary": "Activate a flag key",
                 "operationId": "activate-flag",
@@ -319,7 +319,7 @@
                 }
             }
         },
-        "/v2/flags/{key}/value": {
+        "/flags/{key}/value": {
             "post": {
                 "description": "Get a single flag value for a visitor ID and context",
                 "consumes": [
@@ -329,7 +329,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "v2"
+                    "Flags"
                 ],
                 "summary": "Get flag value by name",
                 "operationId": "get-flag-value",
@@ -373,7 +373,31 @@
                 }
             }
         },
-        "/v2/hits": {
+        "/health": {
+            "post": {
+                "description": "Get current health status for the API",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Health"
+                ],
+                "summary": "Get health status",
+                "operationId": "health",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/handlers.FlagInfos"
+                        }
+                    }
+                }
+            }
+        },
+        "/hits": {
             "post": {
                 "description": "Send a hit to Flagship datacollect",
                 "consumes": [
@@ -383,7 +407,7 @@
                     "image/gif"
                 ],
                 "tags": [
-                    "v2"
+                    "Hits"
                 ],
                 "summary": "Send a hit",
                 "operationId": "send-hit",
