# pkg/handlers/campaigns.go
@@ -2,7 +2,6 @@ package handlers
 
 import (
 	"net/http"
-	"sync"
 
 	"github.com/flagship-io/flagship-go-sdk/v2/pkg/model"
 
@@ -40,7 +39,7 @@ type CampaignsResponse struct {
 
 // Campaigns returns a campaigns handler
 // @Summary Get all campaigns for the visitor
-// @Tags v2
+// @Tags Campaigns
 // @Description Get all campaigns value and metadata for a visitor ID and context
 // @ID get-campaigns
 // @Accept  json
@@ -49,52 +48,14 @@ type CampaignsResponse struct {
 // @Success 200 {object} CampaignsResponse
 // @Failure 400 {object} httputils.HTTPError
 // @Failure 500 {object} httputils.HTTPError
-// @Router /v2/campaigns [post]
+// @Router /campaigns [post]
 func Campaigns(fsClient *client.Client) func(*gin.Context) {
 	return func(c *gin.Context) {
-		vObj := &campaignsBody{}
-		err := c.BindJSON(vObj)
-		if err != nil {
-			c.JSON(http.StatusBadRequest, gin.H{
-				"error": err.Error(),
-			})
-			return
-		}
-
-		v, err := fsClient.NewVisitor(vObj.VisitorID, vObj.Context)
-		if err != nil {
-			c.JSON(http.StatusBadRequest, gin.H{
-				"error": err.Error(),
-			})
-			return
-		}
-
-		err = v.SynchronizeModifications()
-		if err != nil {
-			c.JSON(http.StatusBadRequest, gin.H{
-				"error": err.Error(),
-			})
-			return
-		}
-		modifications := v.GetAllModifications()
-
-		if vObj.TriggerHit {
-			go func() {
-				var wg sync.WaitGroup
-				for k := range modifications {
-					wg.Add(1)
-					go func(k string) { // Decrement the counter when the goroutine completes.
-						defer wg.Done()
-						v.ActivateModification(k)
-					}(k)
-				}
-
-				wg.Wait()
-			}()
-		}
+		modifications, _ := c.MustGet("modifications").(map[string]model.FlagInfos)
+		visitor := c.MustGet("visitor").(*client.Visitor)
 
 		response := CampaignsResponse{
-			VisitorID: v.ID,
+			VisitorID: visitor.ID,
 			Campaigns: []model.Campaign{},
 		}
 
