# pkg/handlers/flagActivate.go
@@ -17,7 +17,7 @@ type flagActivated struct {
 
 // FlagActivate returns a flag activation handler
 // @Summary Activate a flag key
-// @Tags v2
+// @Tags Flags
 // @Description Activate a flag by its key for a visitor ID
 // @ID activate-flag
 // @Accept  json
@@ -27,7 +27,7 @@ type flagActivated struct {
 // @Success 200 {object} flagActivated
 // @Failure 400 {object} httputils.HTTPError
 // @Failure 500 {object} httputils.HTTPError
-// @Router /v2/flags/{key}/activate [post]
+// @Router /flags/{key}/activate [post]
 func FlagActivate(fsClient *client.Client, hasCache bool) func(*gin.Context) {
 	return func(c *gin.Context) {
 		if !hasCache {
